--- a/environment/env.yml
+++ b/environment/env.yml
@@ -1,8 +1,6 @@
-NODE_ENV: ${param:environment}
+ENVIRONMENT: ${param:environment}
 DB_HOST: ${param:db-host}
 DB_PORT: ${param:db-port}
 DB_NAME: ${param:db-name}
 DB_USER: ${param:db-user}
 DB_PASSWORD: ${param:db-password}
-SENTRY_ENABLED: ${param:sentry-enabled}
-SENTRY_DSN: ${param:sentry-dsn}
